<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.myadridev.mypocketcave.activities.BottleDetailActivity"
    tools:showIn="@layout/bottle_detail">

    <android.support.percent.PercentRelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/bottle_detail_domain"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginBottom="@dimen/vertical_big_margin_between_elements"
            android:layout_marginEnd="@dimen/horizontal_margin_between_elements"
            android:layout_marginStart="@dimen/horizontal_margin_between_elements"
            android:layout_marginTop="@dimen/vertical_big_margin_between_elements"
            android:hint="@string/bottle_domain"
            android:textSize="@dimen/text_size" />

        <ImageView
            android:id="@+id/bottle_detail_wine_color_icon"
            android:layout_width="@dimen/bottle_icon_size_large"
            android:layout_height="@dimen/bottle_icon_size_large"
            android:layout_alignParentStart="true"
            android:layout_below="@id/bottle_detail_domain"
            android:layout_marginBottom="@dimen/vertical_big_margin_between_elements"
            android:layout_marginEnd="@dimen/horizontal_margin_between_elements"
            android:layout_marginTop="@dimen/vertical_big_margin_between_elements"
            android:src="@drawable/wine_red"
            app:layout_widthPercent="20%" />

        <TextView
            android:id="@+id/bottle_detail_wine_color"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@id/bottle_detail_wine_color_icon"
            android:layout_alignTop="@id/bottle_detail_wine_color_icon"
            android:layout_below="@id/bottle_detail_domain"
            android:layout_marginEnd="@dimen/horizontal_margin_between_elements"
            android:layout_marginStart="@dimen/horizontal_margin_between_elements"
            android:layout_toEndOf="@id/bottle_detail_wine_color_icon"
            android:gravity="center_vertical"
            android:text="Couleur"
            android:textSize="@dimen/text_size"
            app:layout_widthPercent="40%" />

        <TextView
            android:id="@+id/bottle_detail_millesime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_below="@id/bottle_detail_wine_color_icon"
            android:layout_marginEnd="@dimen/horizontal_margin_between_elements"
            android:layout_marginStart="@dimen/horizontal_margin_between_elements"
            android:gravity="center"
            android:text="@string/no_millesime"
            android:textSize="@dimen/text_size"
            app:layout_widthPercent="45%" />

        <TextView
            android:id="@+id/bottle_detail_stock"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@id/bottle_detail_millesime"
            android:layout_alignParentEnd="true"
            android:layout_alignTop="@id/bottle_detail_millesime"
            android:layout_below="@id/bottle_detail_wine_color_icon"
            android:layout_marginEnd="@dimen/horizontal_margin_between_elements"
            android:layout_marginStart="@dimen/horizontal_margin_between_elements"
            android:gravity="center"
            android:text="@string/bottles_stock"
            android:textSize="@dimen/text_size"
            app:layout_widthPercent="45%" />

        <TextView
            android:id="@+id/bottle_detail_placed"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_below="@id/bottle_detail_millesime"
            android:layout_marginBottom="@dimen/vertical_big_margin_between_elements"
            android:layout_marginEnd="@dimen/horizontal_margin_between_elements"
            android:layout_marginStart="@dimen/horizontal_margin_between_elements"
            android:layout_marginTop="@dimen/vertical_big_margin_between_elements"
            android:gravity="center"
            android:text="bottles placed"
            android:textSize="@dimen/text_size" />

        <ImageView
            android:id="@+id/see_in_caves_image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@id/bottle_detail_placed"
            android:layout_alignTop="@id/bottle_detail_placed"
            android:layout_marginBottom="@dimen/vertical_margin_for_icons"
            android:layout_marginTop="@dimen/vertical_margin_for_icons"
            android:layout_centerVertical="true"
            android:layout_toEndOf="@id/bottle_detail_placed"
            android:src="@drawable/eye" />

        <RatingBar
            android:id="@+id/bottle_detail_rating"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_alignParentStart="true"
            android:layout_below="@id/bottle_detail_placed"
            android:layout_centerVertical="true"
            android:layout_marginBottom="@dimen/vertical_big_margin_between_elements"
            android:layout_marginEnd="@dimen/horizontal_margin_between_elements"
            android:layout_marginStart="@dimen/horizontal_margin_between_elements"
            android:layout_marginTop="@dimen/vertical_big_margin_between_elements"
            android:isIndicator="true"
            android:numStars="5"
            android:progressDrawable="@drawable/rating"
            android:stepSize="1" />

        <RatingBar
            android:id="@+id/bottle_detail_price_rating"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_alignParentStart="true"
            android:layout_below="@id/bottle_detail_rating"
            android:layout_centerVertical="true"
            android:layout_marginBottom="@dimen/vertical_big_margin_between_elements"
            android:layout_marginEnd="@dimen/horizontal_margin_between_elements"
            android:layout_marginStart="@dimen/horizontal_margin_between_elements"
            android:layout_marginTop="@dimen/vertical_big_margin_between_elements"
            android:isIndicator="true"
            android:numStars="5"
            android:progressDrawable="@drawable/price_rating"
            android:stepSize="1" />

        <TextView
            android:id="@+id/bottle_detail_food"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_below="@id/bottle_detail_price_rating"
            android:layout_marginBottom="@dimen/vertical_big_margin_between_elements"
            android:layout_marginEnd="@dimen/horizontal_big_margin_between_elements"
            android:layout_marginStart="@dimen/horizontal_big_margin_between_elements"
            android:layout_marginTop="@dimen/vertical_big_margin_between_elements"
            android:hint="@string/bottle_detail_food"
            android:textSize="@dimen/text_size" />

        <TextView
            android:id="@+id/bottle_detail_person"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentStart="true"
            android:layout_below="@id/bottle_detail_food"
            android:layout_marginBottom="@dimen/vertical_big_margin_between_elements"
            android:layout_marginEnd="@dimen/horizontal_margin_between_elements"
            android:layout_marginStart="@dimen/horizontal_margin_between_elements"
            android:layout_marginTop="@dimen/vertical_big_margin_between_elements"
            android:hint="@string/bottle_detail_person"
            android:textSize="@dimen/text_size" />

        <TextView
            android:id="@+id/bottle_detail_comments"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentStart="true"
            android:layout_below="@id/bottle_detail_person"
            android:layout_marginBottom="@dimen/vertical_big_margin_between_elements"
            android:layout_marginEnd="@dimen/horizontal_margin_between_elements"
            android:layout_marginStart="@dimen/horizontal_margin_between_elements"
            android:layout_marginTop="@dimen/vertical_big_margin_between_elements"
            android:hint="@string/bottle_detail_comments"
            android:textSize="@dimen/text_size" />

        <ImageView
            android:id="@+id/bottle_detail_organic"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignEnd="@+id/bottle_detail_stock"
            android:layout_alignTop="@+id/bottle_detail_wine_color"
            app:srcCompat="@drawable/organic_farming" />

    </android.support.percent.PercentRelativeLayout>


</android.support.v4.widget.NestedScrollView>
