...
    <string name="food_salad">Salad - raw vegetables</string>
    <string name="food_salty_sweet">Salty sweet food</string>
    <string name="food_soup">Soup</string>
    <string name="food_starter">Starter</string>
    <string name="food_vegetable">Vegetable - side dish</string>
    <string name="food_white_meat">White meat</string>
    <string name="global_no">Let\'s keep it!</string>
    <string name="global_yes">Let\'s remove it!</string>
    <string name="no_bottles">No bottles in the cellar, so sad!</string>
    <string name="no_caves">No cellar created, efforts are needed!</string>
    <string name="no_millesime">No millesime</string>
    <string name="store_indexes" translatable="false">indexes</string>
    <string name="store_bottle" translatable="false">bottle_%1$d</string>
    <string name="suggest_me_a_bottle_button">Please, suggest me a bottle</string>
    <string name="title_about">About</string>
    <string name="title_bottles">My bottles</string>
    <string name="title_caves">My cellars</string>
    <string name="title_create_bottle">Add a bottle</string>
    <string name="title_edit_bottle">Edit the bottle</string>
    <string name="title_main">My pocket cellar</string>
    <string name="title_suggest_bottle_search">Suggest me a bottle</string>
    <string name="wine_color_champagne">Champagne</string>
    <string name="wine_color_red">Red</string>
    <string name="wine_color_rose">Rosé</string>
    <string name="wine_color_white">White</string>
    <string name="about_license_detail">"THE BEER-WARE LICENSE" (Revision 42): <![CDATA[<myadridev@gmail.com>]]> wrote this file. As long as you retain this notice you can do whatever you want with this stuff. If we meet some day, and you think this stuff is worth it, you can buy me a beer in return Adrien</string>
...
